Expanded and standardized integration tests